// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-navigation-group should render with label: renders-with-label 1`] = `
<ic-navigation-group class="expanded" label="Group label" role="listitem">
  <mock:shadow-root>
    <button aria-expanded="true" aria-haspopup="false" class="light navigation-group" tabindex="0">
      <ic-typography variant="label">
        Group label
      </ic-typography>
    </button>
    <ul class="grouped-links-wrapper" style="--navigation-child-items-height: auto;">
      <slot></slot>
    </ul>
  </mock:shadow-root>
</ic-navigation-group>
`;

exports[`ic-navigation-group should test toggleExpanded: renders-with-label 1`] = `
<ic-navigation-group class="expanded" label="Group label" role="listitem">
  <mock:shadow-root>
    <button aria-expanded="true" aria-haspopup="false" class="light navigation-group" tabindex="0">
      <ic-typography variant="label">
        Group label
      </ic-typography>
    </button>
    <ul class="grouped-links-wrapper">
      <slot></slot>
    </ul>
  </mock:shadow-root>
  <ic-navigation-item class="light navigation-item" href="/" label="Home" role="listitem">
    <mock:shadow-root>
      <ic-tooltip class="tooltip-navigation-item" label="Home" placement="right" target="navigation-item">
        <a aria-labelledby="ic-tooltip-navigation-item" class="link" href="/" part="link">
          <ic-typography variant="label">
            Home
          </ic-typography>
        </a>
      </ic-tooltip>
    </mock:shadow-root>
  </ic-navigation-item>
</ic-navigation-group>
`;
